added funcs and DOM elements

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     </head>
 <body>
     <div class="container">
-        <h1 class="textField"></h1>
         <div class="row max-height align-items-center text-center">
             <div class="col">
                 <button id="button1" class="btn btn-secondary">Click Me!</button>
@@ -23,6 +22,8 @@
               <button id="button2" class="btn btn-secondary">Click Me!</button>
           </div> 
         </div>
+        <h1 class="textField" style="text-align: center; margin-bottom: auto; margin-top: auto;"></h1>
+
                
     </div>
     
